Request pokemon list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-container">
       <span class='title'>Qual pokemon você está buscando?</span>
 
-      <form onsubmit="return;">
+      <form onsubmit="return;" class='search-bar-form'>
         <input type='text' class='input-field' />
         <button type='submit'><i class='fa fa-search'></i></button>
       </form>
