Add pokemon detail

--- a/pokemon-list.html
+++ b/pokemon-list.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 
   <link rel='stylesheet' href='./css/index.css'>
-  <link rel='stylesheet' href='./css/pokedex-list.css'>
+  <link rel='stylesheet' href='./css/pokemon-list.css'>
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'>
 </head>
 <body>
