--- a/pokemon-list.html
+++ b/pokemon-list.html
@@ -24,6 +24,11 @@
 
   </div>
 
+  <div class='pagination'>
+    <button id='pagination-previous'>Anterior</button>
+    <button id='pagination-next'>Próximo</button>
+  </div>
+
   <script src='./js/pokemon-list.js'></script>
 </body>
 </html>
