Background color by pokemon type

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <i class='fa fa-arrow-circle-right action-item-arrow'></i>
         </div>
 
-        <div class='action-item' id='action-item-pokedex'>
+        <div class='action-item' id='action-item-moves'>
           <img src='./images/pokeball.png' class='action-item-pokeball' />
-          <span class='text'>Pokedex</span>
+          <span class='text'>Movimentos</span>
           <i class='fa fa-arrow-circle-right action-item-arrow'></i>
         </div>
       </div>
