--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <span class='title'>Qual pokemon você está buscando?</span>
 
       <form onsubmit="return;" class='search-bar-form'>
-        <input type='text' class='input-field' />
-        <button type='submit'><i class='fa fa-search'></i></button>
+        <input type='text' disabled class='input-field' />
+        <button type='submit' disabled><i class='fa fa-search'></i></button>
       </form>
 
       <div class='action-content'>
